@@ -5147,6 +5147,7 @@ void set_old_nodes(
   {
   char     *old;
   char     *po;
+  long      cray_enabled = FALSE;
 
   if (pjob->ji_wattr[JOB_ATR_exec_host].at_flags & ATR_VFLAG_SET)
     {
@@ -5170,6 +5171,14 @@ void set_old_nodes(
 
     free(old);
     }  /* END if pjobs exec host is set */
+
+  /* record the job on the alps_login if cray_enabled */
+  get_svr_attr_l(SRV_ATR_CrayEnabled, &cray_enabled);
+  if ((cray_enabled == TRUE) &&
+      (pjob->ji_wattr[JOB_ATR_login_node_id].at_flags & ATR_VFLAG_SET))
+    {
+    set_one_old(pjob->ji_wattr[JOB_ATR_login_node_id].at_val.at_str, pjob);
+    }
 
   return;
   }  /* END set_old_nodes() */
